[package]
name = "hanabi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hanablive = {path = "../hanablive"}
tokio = { version = "1.37.0", features = ["full"] }
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
