[package]
name = "hanabi-web"
version = "0.1.0"
authors = ["Nikhil Jha <oss@nikhiljha.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5.0", features = ["fullstack", "router"] }
hanabi = { path = "../hanabi" }
log = "0.4.19"
dioxus-logger = "0.4.1"
axum = { version = "0.7.5", features = ["ws", "multipart", "http2", "macros"], optional = true }
tokio = { version = "1.37.0", features = ["full", "tracing"], optional = true }
tracing = { version = "0.1.40", optional = true }
anyhow = "1.0.81"

[features]
default = []
server = ["dioxus/axum", "dep:tokio", "dep:tracing", "dep:axum"]
web = ["dioxus/web"]
