[package]
name = "hanablive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
expect-test = "1.5.0"
reqwest = "0.11.27"
reqwest-websocket = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.18"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
tracing = "0.1.40"
